--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "gulp serve",
-    "build": "gulp build",
+    "serve": "cross-env NODE_ENV=development gulp serve",
+    "build": "cross-env NODE_ENV=production gulp build",
     "clean": "gulp clean",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,7 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "browser-sync": "^2.27.10",
+    "cross-env": "^7.0.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
@@ -26,6 +27,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
+    "gulp-file-include": "^2.3.0",
     "gulp-html-replace": "^1.6.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
@@ -36,9 +38,11 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify-es": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "http-proxy-middleware": "^2.0.6",
     "imagemin-pngquant": "^9.0.2",
-    "sass": "^1.52.2",
-    "http-proxy-middleware": "^2.0.6"
+    "minimist": "^1.2.6",
+    "sass": "^1.52.2"
   },
   "bugs": {
     "url": "https://github.com/zhanglingthai/zipimgs-web/issues"
