--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "apiUrl": "localhost:3000",
+    "apiUrl": "http://localhost:3000",
     "env":"development"
   },
   "production": {
