--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify-es": "^3.0.0",
+    "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.8",
     "http-proxy-middleware": "^2.0.6",
     "imagemin-pngquant": "^9.0.2",
